Fix detection when form may be submitted.

In order to prevent regressions because of site isolation, the logic of
detection that navigation might be a form submission was implemented
in the browser process. Namely the navigation may be a form submission
if it is renderer initiated and is not link transition. It is the same
as it was in the renderer process. It turned out, that now enum
ui::PageTransition doesn't allow to detect link transition. This CL
implements the similar logic, namely:
  1.Renderer initiated navigations
  2.Form submission or navigations without user gesture (nowadays a lot
of forms are submitted with some JavaScript).

Bug: 918111, 831123, 842643

TBR=dvadym@chromium.org

(cherry picked from commit 2c6edf424f1df37e7759f285b03403f39d141a5e [formerly 03cad4f76faeae0a2e9cf2089ea109e99b4c16c5])

Change-Id: I246e5a5f0f92ec6482053fe77b53fab45445242e
Reviewed-on: https://chromium-review.googlesource.com/c/1391675
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#619143}
Reviewed-on: https://chromium-review.googlesource.com/c/1398445
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#594}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 81c3334c4a621885ff8efb51b157f3dcac0444e1