components/password_manager/content/browser/content_password_manager_driver.cc
@@ -167,6 +167,7 @@ void ContentPasswordManagerDriver::DidNavigateFrame(
       !navigation_handle->IsSameDocument()) {
     NotifyDidNavigateMainFrame(navigation_handle->IsRendererInitiated(),
                                navigation_handle->GetPageTransition(),
+                               navigation_handle->HasUserGesture(),
                                GetPasswordManager());
     GetPasswordAutofillManager()->DidNavigateMainFrame();
   }
